<resources>
    <string name="app_name">And02</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="hint_id">이메일을 입력하세요</string>
    <string name="hint_password">패스워드를 입력하세요</string>
    <string name="hint_name">성명을 입력하세요</string>
    <string name="hint_mobileNO">휴대폰번호를 입력하세요</string>
    <string name="hint_email">이메일을 입력하세요</string>
    <string name="btn_login">로그인</string>
    <string name="btn_register">회원가입</string>
    <string name="btn_logout">로그아웃</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="action_share">Share</string>
    <string name="action_upload">Upload</string>
    <string name="action_copy">Copy</string>
    <string name="action_print">Print</string>
</resources>