<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="8dp"
    >
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Check"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/check1"/>
    <TextView
        android:id="@+id/textView"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/ic_phone"
        android:drawableStart="@drawable/ic_save"
        android:text="@string/action_share"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/ActionItem"
        />
    <TextView
        android:id="@+id/textView2"
        android:drawableLeft="@drawable/ic_phone"
        android:drawableStart="@drawable/ic_save"
        android:text="@string/action_upload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        style="@style/ActionItem"
        />
    <TextView
        android:id="@+id/textView3"
        android:drawableLeft="@drawable/ic_phone"
        android:drawableStart="@drawable/ic_save"
        android:text="@string/action_copy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        style="@style/ActionItem"
        />
    <TextView
        android:id="@+id/textView4"
        android:drawableLeft="@drawable/ic_phone"
        android:drawableStart="@drawable/ic_save"
        android:text="@string/action_print"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        style="@style/ActionItem"
        />
</androidx.constraintlayout.widget.ConstraintLayout>