<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:gravity="center"
              android:orientation="vertical"
              android:padding="10dp" >

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

        <EditText
                android:id="@+id/et_login_id"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_id"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:text="player01@kbostat.co.kr"
        />

        <EditText
                android:id="@+id/et_login_pass"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_password"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:text="playerpassword"
        />

        <Button
                android:id="@+id/btn_login_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="#ea4c88"
                android:text="@string/btn_login" />

        <Button
                android:id="@+id/btn_login_register"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="#ea4c88"
                android:text="@string/btn_register" />

        <Button
                android:id="@+id/btn_login_cancel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="#ea4c88"
                android:text="닫기" />

    </LinearLayout>
</LinearLayout>